--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
 	"type": "wordpress-plugin",
 	"require": {
 		"composer/installers": "~1.0 || ^2.0",
+		"symfony/deprecation-contracts": "2.2.*",
 		"aws/aws-sdk-php": "~3.18"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "7.5",
-		"pcov/clobber": "^2.0",
+		"phpunit/phpunit": "^9.0",
 		"humanmade/psalm-plugin-wordpress": "^1.0"
 	},
 	"scripts": {
@@ -35,6 +35,7 @@
 		"check-types": "./vendor/bin/psalm"
 	},
 	"config": {
+		"platform-check": false,
 		"allow-plugins": {
 			"composer/installers": true
 		}
